[gd_scene load_steps=4 format=3 uid="uid://b3luqvoq6dgja"]

[ext_resource type="Script" uid="uid://bmwwclop1fcy5" path="res://scenes/main/main.gd" id="1_k2fmo"]
[ext_resource type="Script" uid="uid://b2nh40f1liy0c" path="res://scripts/padding_panel.gd" id="2_l3cfh"]
[ext_resource type="LabelSettings" uid="uid://o54cmliv3pj8" path="res://resources/label_settings/title.tres" id="3_6q06x"]

[node name="Main" type="Node"]
script = ExtResource("1_k2fmo")

[node name="PaddingContainer" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_l3cfh")
max_children_width = 30.0
metadata/_custom_type_script = "uid://b2nh40f1liy0c"

[node name="VBoxContainer" type="VBoxContainer" parent="PaddingContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="PaddingContainer/VBoxContainer"]
layout_mode = 2
text = "Number and Color Matching Card Disposal Race Game"
label_settings = ExtResource("3_6q06x")
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PaddingContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="PaddingContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Offline..."

[node name="HBoxContainer" type="HBoxContainer" parent="PaddingContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="PaddingContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="PaddingContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="VersionTitle" type="Label" parent="PaddingContainer/VBoxContainer"]
layout_mode = 2
text = "v0.0.1"

[connection signal="pressed" from="PaddingContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PaddingContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
